--- a/bower.json
+++ b/bower.json
@@ -10,5 +10,11 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "angular": "^1.5.5",
+    "angular-ui-router": "^0.2.18",
+    "jquery": "^2.2.3",
+    "angular-bootstrap": "^1.3.2"
+  }
 }
