--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,8 @@
     "angular": "^1.5.5",
     "angular-ui-router": "^0.2.18",
     "jquery": "^2.2.3",
-    "angular-bootstrap": "^1.3.2"
+    "angular-bootstrap": "^1.3.2",
+    "angular-material": "^1.0.7",
+    "angular-animate": "^1.5.5"
   }
 }
